--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+$font-stack:    Helvetica, sans-serif
+$primary-color: #F5F5F5		
+
+body 
+  background-color: $primary-color
+  
+
+
+.example-card 
+  max-width: 400px
+.example-header-image 
+  background-size: cover
