--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -56,4 +56,6 @@
 
   </mat-expansion-panel>
 
+  <button (onclick)="this.authenticate()"></button>
+
 <mat-slider color="primary" style="width: 100%;" min="1" max="100" step="1" value="20"></mat-slider>
